# Fosslate

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  compose.yml  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: docker.yml
apps/api/: .env.example  Cargo.toml  package.json
apps/api/migrations/: 20260620170000_create_projects.sql  20260621120000_admin_setup.sql  20260621130000_add_setup_internal_secrets_key.sql  20260621150000_auth_flow.sql  20260621153000_signup_email_verifications.sql  20260621170000_admin_and_proofreaders.sql  20260621180000_account_sso_linking.sql
apps/api/src/: app.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  openapi.rs
apps/api/src/adapters/: mod.rs  oauth.rs  resend.rs
apps/api/src/adapters/postgres/: approvals.rs  auth.rs  current_translations.rs  languages.rs  mod.rs  namespaces.rs  projects.rs  setup.rs  source_strings.rs  stats.rs  translations.rs  users.rs  votes.rs
apps/api/src/jobs/: mod.rs  rebuild_projections.rs  rebuild_stats.rs
apps/api/src/models/: approval.rs  auth.rs  current_translation.rs  instance_settings.rs  language.rs  mod.rs  namespace.rs  pagination.rs  project.rs  setup.rs  source_string.rs  stats.rs  translation.rs  user.rs  vote.rs
apps/api/src/routes/: approvals.rs  auth.rs  health.rs  languages.rs  meta.rs  mod.rs  namespaces.rs  projects.rs  settings.rs  setup.rs  stats.rs  strings.rs  translations.rs  users.rs  votes.rs
apps/api/src/services/: approvals.rs  auth.rs  instance_config.rs  instance_settings.rs  languages.rs  maintenance.rs  mod.rs  namespaces.rs  projects.rs  setup.rs  source_strings.rs  stats.rs  translations.rs  users.rs  votes.rs
apps/api/tests/: auth.rs  namespaces_strings.rs  schema_users_projects.rs  settings.rs  setup.rs  stats_jobs_openapi.rs  translations_votes_approvals.rs
apps/api/tests/common/: mod.rs
apps/web/: components.json  middleware.ts  next.config.ts  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/auth/: AuthButton.tsx  AuthLayout.tsx  BrandIcon.tsx
apps/web/components/layout/: Navbar.tsx
apps/web/components/projects/: NewProjectDialog.tsx  ProgressMeter.tsx  project-format.ts
apps/web/components/retroui/: Accordion.tsx  Calendar.tsx  (+6 more)
apps/web/lib/: api.ts  auth-client.ts  auth-proxy.ts  auth-server.ts  auth-validation.ts  projects-client.ts  projects-proxy.ts  projects.ts  settings-client.ts  settings-proxy.ts  setup-client.ts  setup-proxy.ts  setup-types.ts
apps/web/pages/: _app.tsx  _document.tsx  forgot-password.tsx  globals.css  index.tsx  login.tsx  reset-password.tsx  settings.tsx  signup.tsx
docker/: start.sh
docs/: API_STRUCTURE.md  ERD.md  GLOSSARY.md  README.md
(+26 files in other folders)
